<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Little Note</string>
    <string name="action_settings">Settings</string>
    <string name="note_content_hint">Note</string>
    <string name="bold_text">B</string>
    <string name="italic_text">i</string>
    <string name="underline_text"><u>u</u></string>
    <string name="action_save_title">save</string>
    <string name="noeffect_text">X</string>
    <string name="note_title_hint">Titre</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add_title">add a note</string>

</resources>
